--- a/index.html
+++ b/index.html
@@ -398,43 +398,43 @@
         <aside class="hero-image-opacity" style="--hero-opacity-color: var(--white-alpha-color);">
           <div class="hero-image-content">
             <div class="container">
-              <h2 class="seccion-title">My clients say</h2>
-              <article class="carousel" style="carrousel-bg-color: var(--white-alpha-color);">
+              <h2 class="section-title">My clients say</h2>
+              <article class="carousel" style="--carousel-bg-color: var(--white-alpha-color);">
                 <input type="radio" name="slides" id="slide-1" checked>
                 <input type="radio" name="slides" id="slide-2">
                 <input type="radio" name="slides" id="slide-3">
                 <input type="radio" name="slides" id="slide-4">
                <ul class="slides">
                   <li class="slide">
-                    <img src="./assets/avatar-1.png" alt="Cliente 1">
+                    <img class="avatar" src="./assets/avatar-1.png" alt="Cliente 1">
                     <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non neque in sapiente! Voluptatem harum quisquam ratione esse id odit alias doloribus illo aperiam dolore! Fugit veniam modi nam doloremque dignissimos.</blockquote>
-                    <h3>Nombre del cliente</h3>
+                    <h3 class="text-first-color">Nombre del cliente</h3>
                     <h6>Puesto del cliente</h6>
                   </li>
                   <li class="slide">
-                    <img src="./assets/avatar-1.png" alt="Cliente 2">
+                    <img class="avatar" src="./assets/avatar-2.png" alt="Cliente 2">
                     <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non neque in sapiente! Voluptatem harum quisquam ratione esse id odit alias doloribus illo aperiam dolore! Fugit veniam modi nam doloremque dignissimos.</blockquote>
-                    <h3>Nombre del cliente</h3>
+                    <h3 class="text-first-color">Nombre del cliente</h3>
                     <h6>Puesto del cliente</h6>
                   </li>
                   <li class="slide">
-                    <img src="./assets/avatar-1.png" alt="Cliente 3">
+                    <img class="avatar" src="./assets/avatar-3.png" alt="Cliente 3">
                     <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non neque in sapiente! Voluptatem harum quisquam ratione esse id odit alias doloribus illo aperiam dolore! Fugit veniam modi nam doloremque dignissimos.</blockquote>
-                    <h3>Nombre del cliente</h3>
+                    <h3 class="text-first-color">Nombre del cliente</h3>
                     <h6>Puesto del cliente</h6>
                   </li>
                   <li class="slide">
-                    <img src="./assets/avatar-1.png" alt="Cliente 4">
+                    <img class="avatar" src="./assets/avatar-4.png" alt="Cliente 4">
                     <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non neque in sapiente! Voluptatem harum quisquam ratione esse id odit alias doloribus illo aperiam dolore! Fugit veniam modi nam doloremque dignissimos.</blockquote>
-                    <h3>Nombre del cliente</h3>
+                    <h3 class="text-first-color">Nombre del cliente</h3>
                     <h6>Puesto del cliente</h6>
                   </li>
                 </ul>
                 <aside class="slides-nav">
-                  <label for="slide-1" id="dot-1">eee</label>
-                  <label for="slide-1" id="dot-2">eee</label>
-                  <label for="slide-1" id="dot-3">www</label>
-                  <label for="slide-1" id="dot-4">qqqq</label>
+                  <label for="slide-1" id="dot-1"></label>
+                  <label for="slide-1" id="dot-2"></label>
+                  <label for="slide-1" id="dot-3"></label>
+                  <label for="slide-1" id="dot-4"></label>
                 </aside>
               </article>
             </div>
