--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Portafolio CV - luchomoore</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -12,6 +12,18 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <title></title>
+    <meta name="description" content="Hi! Welcome to my professional portfolio, I'm Lucho Moore, Web Developer">
+    <link rel="canonical" href="https:luchom77.github.io/luchom77">
+    <link rel="favicon" href="https:luchom77.github.io/luchom77">
+    <link rel="apple-touch-icon" href="https:luchom77.github.io/luchom77/assets/favicon.png">
+    <meta name="theme-color" content="#31549b">
+    <meta name="twitter:card" content="summary">
+    <meta property="og:type" content="website">
+    <meta property="og:title" name="twitter:title" content="Portafolio CV - luchomoore">
+    <meta property="og:image" name="twitter:image" content="./assets/home-hero-image.jpg">
+    <meta property="og:url" name="twitter:url" content="https:luchom77.github.io/luchom77">
+    <meta property="og:description" name="twitter:description" content="Hi! Welcome to my professional portfolio, I'm Lucho Moore, Web Developer">
   </head>
 
   <body>
