--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
       </section>
     </header>
     <section id="inicio" class="home">
-      <article class="hero-image" style="--hero-image: url('assets/home-hero-image.jpg'); --hero-attachment: fixed;">
+      <article class="hero-image" style="--hero-image: url('assets/home-hero-image.png'); --hero-attachment: fixed;">
         <aside class="hero-image-opacity" style="--hero-opacity-color: var(--black-alpha-color);">
           <div class="hero-image-content">
             <h2 class="hero-image-title" style="--hero-text-color: var(--white-color);">
-              Welcome <br> to my site
+              Welcome <br> to my Website
             
             </h2>
             <a href="#contacto" class="btn">Contact me</a>
@@ -204,8 +204,8 @@
           <img src="assets/card-portfolio.jpg" alt="Trabajo 1">
           <aside class="portfolio-card-info">
             <div>
-              <h3>Proyect 1</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque minus similique, laboriosam facilis numquam eius officia veniam exercitationem illo, amet ipsam deleniti delectus perferendis voluptatum! Dignissimos, nulla? Eos, possimus error.</p>
+              <h3>Proyect 1: Angular</h3>
+              <p>This project was the integrating work of the full stack web development course of the Argentina Program Edition 4. It consisted in the development of a portfolio using tools such as JavaScript, Typescript, Angular, Bootstrap, Mysql, among others.</p>
             </div>
           </aside>
         </a>
@@ -213,8 +213,8 @@
           <img src="assets/card-portfolio-2.jpg" alt="Trabajo 2">
           <aside class="portfolio-card-info">
             <div>
-              <h3>Proyect 2</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque minus similique, laboriosam facilis numquam eius officia veniam exercitationem illo, amet ipsam deleniti delectus perferendis voluptatum! Dignissimos, nulla? Eos, possimus error.</p>
+              <h3>Proyect 2: Figma</h3>
+              <p>In this development of a digital interface for a display of information and control of agricultural machinery, figma was used for the layout and prototyping.</p>
             </div>
           </aside>
         </a>
@@ -222,8 +222,8 @@
           <img src="assets/card-portfolio-3.jpg" alt="Trabajo 3">
           <aside class="portfolio-card-info">
             <div>
-              <h3>Proyect 3</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque minus similique, laboriosam facilis numquam eius officia veniam exercitationem illo, amet ipsam deleniti delectus perferendis voluptatum! Dignissimos, nulla? Eos, possimus error.</p>
+              <h3>Proyect 3: Figma</h3>
+              <p>Coming soon: App design</p>
             </div>
           </aside>
         </a>
@@ -231,8 +231,8 @@
           <img src="assets/card-portfolio-4.jpg" alt="Trabajo 4">
           <aside class="portfolio-card-info">
             <div>
-              <h3>Proyect 4</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque minus similique, laboriosam facilis numquam eius officia veniam exercitationem illo, amet ipsam deleniti delectus perferendis voluptatum! Dignissimos, nulla? Eos, possimus error.</p>
+              <h3>Proyect 4: Blender</h3>
+              <p>In this oppórtunity I made a 3d model in blender of a presentation card, I animated and rendered it as an 8 sec video. It was a one week job.</p>
             </div>
           </aside>
         </a>
@@ -240,7 +240,7 @@
           <img src="assets/card-portfolio-5.jpg" alt="Trabajo 5">
           <aside class="portfolio-card-info">
             <div>
-              <h3>Proyect 5</h3>
+              <h3>Proyect 5: SolidWorks + Blender</h3>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque minus similique, laboriosam facilis numquam eius officia veniam exercitationem illo, amet ipsam deleniti delectus perferendis voluptatum! Dignissimos, nulla? Eos, possimus error.</p>
             </div>
           </aside>
@@ -249,8 +249,8 @@
           <img src="assets/card-portfolio-6.jpg" alt="Trabajo-6">
           <aside class="portfolio-card-info">
             <div>
-              <h3>Proyect 6</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque minus similique, laboriosam facilis numquam eius officia veniam exercitationem illo, amet ipsam deleniti delectus perferendis voluptatum! Dignissimos, nulla? Eos, possimus error.</p>
+              <h3>Coming soon</h3>
+               <p></p>
             </div>
           </aside>
         </a>
@@ -291,19 +291,21 @@
       </svg>
       </a>
         <article class="portfolio-modal">
-          <img src="assets/card-portfolio-2.jpg" alt="Trabajo-2">
+          <img src="assets/card-portfolio-2.png" alt="Trabajo-2">
           <div class="portfolio-info">
             <h3>Proyect 2</h3>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed sapiente, sunt minus ab quo, aliquid sequi aliquam laboriosam tenetur itaque voluptatum mollitia commodi doloribus pariatur nisi voluptates laborum voluptatem nulla!</p>
             <aside class="portfolio-details">
               <small><b>CLIENT</b></small>
-              <small>Client's name</small>
+              <small>Metalfor S.A.</small>
               <small><b>DATE</b></small>
-              <small>22/22/2222</small>
+              <small>08/12/2022</small>
               <small><b>CATEGORY</b></small>
-              <small>proyect CATEGORY</small>
-              <small><b>LINK</b></small>
-              <small><a href="https://luchomoore.com" target="_blank" rel="noopener">https://luchomoore.com</a></small>
+              <small>User Interface</small>
+              <small><b>LINK 1</b></small>
+              <small><a href="https://www.figma.com/proto/Ow8kPPjFVZpzGS5YW7ZVZS/Pantalla-cosechadora?node-id=1182%3A1253&starting-point-node-id=1182%3A1253" target="_blank" rel="noopener">HARVESTER PROTOTIPE</a></small>
+              <small><b>LINK 2</b></small>
+              <small><a href="https://www.figma.com/proto/D9f5jSaERPEVfUdH3C0GBW/Pantalla-Pulverizadora-Prototipo?node-id=37%3A4213&scaling=min-zoom&page-id=0%3A1&starting-point-node-id=27%3A870" target="_blank" rel="noopener">SPRAYER PROTOTIPE</a></small>
             </aside>
           </div>
         </article>
@@ -343,19 +345,19 @@
       </svg>
       </a>
         <article class="portfolio-modal">
-          <img src="assets/card-portfolio-4.jpg" alt="Trabajo-4">
+          <img src="assets/card-portfolio-4.png" alt="Trabajo-4">
           <div class="portfolio-info">
             <h3>Proyect 4</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed sapiente, sunt minus ab quo, aliquid sequi aliquam laboriosam tenetur itaque voluptatum mollitia commodi doloribus pariatur nisi voluptates laborum voluptatem nulla!</p>
+            <p>In this oppórtunity I made a 3d model in blender of a presentation card, I animated and rendered it as an 8 sec video. It was a one week job. </p>
             <aside class="portfolio-details">
               <small><b>CLIENT</b></small>
-              <small>Client's name</small>
+              <small><a href="https://ewol.academy/" target="_blank" rel="noopener">Ewol</a></small>
               <small><b>DATE</b></small>
-              <small>22/22/2222</small>
+              <small>17/11/2022</small>
               <small><b>CATEGORY</b></small>
-              <small>proyect CATEGORY</small>
+              <small>NFT</small>
               <small><b>LINK</b></small>
-              <small><a href="https://luchomoore.com" target="_blank" rel="noopener">https://luchomoore.com</a></small>
+              <small><a href="https://www.behance.net/gallery/160504855/NFT" target="_blank" rel="noopener">PROTOTIPE</a></small>
             </aside>
           </div>
         </article>
@@ -369,19 +371,19 @@
       </svg>
       </a>
         <article class="portfolio-modal">
-          <img src="assets/card-portfolio-5.jpg" alt="Trabajo-5">
+          <img src="assets/card-portfolio-5.png" alt="Trabajo-5">
           <div class="portfolio-info">
             <h3>Proyect 5</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed sapiente, sunt minus ab quo, aliquid sequi aliquam laboriosam tenetur itaque voluptatum mollitia commodi doloribus pariatur nisi voluptates laborum voluptatem nulla!</p>
+            <p>For this proyect I used SolidWorks for modeling and blender to adjust product's details, create the enviroment, animate and render. Process took 3 weeks. </p>
             <aside class="portfolio-details">
               <small><b>CLIENT</b></small>
-              <small>Client's name</small>
+              <small>FAUD's Students</small>
               <small><b>DATE</b></small>
-              <small>22/22/2222</small>
+              <small>27/06/2021</small>
               <small><b>CATEGORY</b></small>
-              <small>proyect CATEGORY</small>
+              <small>Product Visualization</small>
               <small><b>LINK</b></small>
-              <small><a href="https://luchomoore.com" target="_blank" rel="noopener">https://luchomoore.com</a></small>
+              <small><a href="https://www.behance.net/gallery/122362573/Animacion-para-proyecto-de-tesis" target="_blank" rel="noopener">PROTOTIPE</a></small>
             </aside>
           </div>
         </article>
