--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
           <aside class="portfolio-card-info">
             <div>
               <h3>Proyect 4: Blender</h3>
-              <p>In this oppórtunity I made a 3d model in blender of a presentation card, I animated and rendered it as an 8 sec video. It was a one week job.</p>
+              <p>In this oppórtunity I made a 3d model in blender of a presentation card. I animated and rendered it as an 8 sec video. It was a one week job.</p>
             </div>
           </aside>
         </a>
@@ -241,7 +241,7 @@
           <aside class="portfolio-card-info">
             <div>
               <h3>Proyect 5: SolidWorks + Blender</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque minus similique, laboriosam facilis numquam eius officia veniam exercitationem illo, amet ipsam deleniti delectus perferendis voluptatum! Dignissimos, nulla? Eos, possimus error.</p>
+              <p>For this proyect I used SolidWorks for modeling and blender to adjust product's details, create the enviroment, animate and render. Process took 3 weeks.</p>
             </div>
           </aside>
         </a>
@@ -294,7 +294,7 @@
           <img src="assets/card-portfolio-2.png" alt="Trabajo-2">
           <div class="portfolio-info">
             <h3>Proyect 2</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed sapiente, sunt minus ab quo, aliquid sequi aliquam laboriosam tenetur itaque voluptatum mollitia commodi doloribus pariatur nisi voluptates laborum voluptatem nulla!</p>
+            <p>In this development of a digital interface for a display of information and control of agricultural machinery, figma was used for the layout and prototyping.</p>
             <aside class="portfolio-details">
               <small><b>CLIENT</b></small>
               <small>Metalfor S.A.</small>
@@ -322,17 +322,16 @@
           <img src="assets/card-portfolio-3.jpg" alt="Trabajo-3">
           <div class="portfolio-info">
             <h3>Proyect 3</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed sapiente, sunt minus ab quo, aliquid sequi aliquam laboriosam tenetur itaque voluptatum mollitia commodi doloribus pariatur nisi voluptates laborum voluptatem nulla!</p>
+            <p>Coming soon</p>
             <aside class="portfolio-details">
               <small><b>CLIENT</b></small>
-              <small>Client's name</small>
+              <small>---</small>
               <small><b>DATE</b></small>
-              <small>22/22/2222</small>
+              <small>--/--/----</small>
               <small><b>CATEGORY</b></small>
-              <small>proyect CATEGORY</small>
+              <small>---</small>
               <small><b>LINK</b></small>
-              <small><a href="https://luchomoore.com" target="_blank" rel="noopener">https://luchomoore.com</a></small>
-            </aside>
+              <small><a href="" target="_blank" rel="noopener">---
           </div>
         </article>
       </div>
@@ -348,7 +347,7 @@
           <img src="assets/card-portfolio-4.png" alt="Trabajo-4">
           <div class="portfolio-info">
             <h3>Proyect 4</h3>
-            <p>In this oppórtunity I made a 3d model in blender of a presentation card, I animated and rendered it as an 8 sec video. It was a one week job. </p>
+            <p>In this oppórtunity I made a 3d model in blender of a presentation card. I animated and rendered it as an 8 sec video. It was a one week job. </p>
             <aside class="portfolio-details">
               <small><b>CLIENT</b></small>
               <small><a href="https://ewol.academy/" target="_blank" rel="noopener">Ewol</a></small>
@@ -429,27 +428,27 @@
                <ul class="slides">
                   <li class="slide">
                     <img class="avatar" src="./assets/avatar-1.png" alt="Cliente 1">
-                    <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non neque in sapiente! Voluptatem harum quisquam ratione esse id odit alias doloribus illo aperiam dolore! Fugit veniam modi nam doloremque dignissimos.</blockquote>
-                    <h3 class="text-first-color">Nombre del cliente</h3>
-                    <h6>Puesto del cliente</h6>
+                    <blockquote>Very very good! Congrats on the results! Great job</blockquote>
+                    <h3 class="text-first-color">Lorena</h3>
+                    <h6>Ewol´s graphic designer</h6>
                   </li>
                   <li class="slide">
                     <img class="avatar" src="./assets/avatar-2.png" alt="Cliente 2">
-                    <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non neque in sapiente! Voluptatem harum quisquam ratione esse id odit alias doloribus illo aperiam dolore! Fugit veniam modi nam doloremque dignissimos.</blockquote>
-                    <h3 class="text-first-color">Nombre del cliente</h3>
-                    <h6>Puesto del cliente</h6>
+                    <blockquote>"The attentiveness and ability to interpret what we needed was 10 points. A great job done."</blockquote>
+                    <h3 class="text-first-color">Alex Ross</h3>
+                    <h6>Industrial Design Student</h6>
                   </li>
                   <li class="slide">
                     <img class="avatar" src="./assets/avatar-3.png" alt="Cliente 3">
-                    <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non neque in sapiente! Voluptatem harum quisquam ratione esse id odit alias doloribus illo aperiam dolore! Fugit veniam modi nam doloremque dignissimos.</blockquote>
-                    <h3 class="text-first-color">Nombre del cliente</h3>
-                    <h6>Puesto del cliente</h6>
+                    <blockquote>We are very pleased with the result. The attention to detail and the quality of the final result make us very happy.</blockquote>
+                    <h3 class="text-first-color">Tomás Villa</h3>
+                    <h6>Futboleterno's CEO</h6>
                   </li>
                   <li class="slide">
                     <img class="avatar" src="./assets/avatar-4.png" alt="Cliente 4">
-                    <blockquote>Lorem ipsum dolor sit amet consectetur adipisicing elit. Non neque in sapiente! Voluptatem harum quisquam ratione esse id odit alias doloribus illo aperiam dolore! Fugit veniam modi nam doloremque dignissimos.</blockquote>
-                    <h3 class="text-first-color">Nombre del cliente</h3>
-                    <h6>Puesto del cliente</h6>
+                    <blockquote>"He's been an excelent professional, with great comunication skills and willingness to achieve the better result possible."</blockquote>
+                    <h3 class="text-first-color">Gabriela</h3>
+                    <h6>Dancing Toys CEO</h6>
                   </li>
                 </ul>
                 <aside class="slides-nav">
