--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                <ul class="slides">
                   <li class="slide">
                     <img class="avatar" src="./assets/avatar-1.png" alt="Cliente 1">
-                    <blockquote>Very very good! Congrats on the results! Great job</blockquote>
+                    <blockquote>"Very very good! Congrats on the results! Great job."</blockquote>
                     <h3 class="text-first-color">Lorena</h3>
                     <h6>Ewol´s graphic designer</h6>
                   </li>
@@ -440,7 +440,7 @@
                   </li>
                   <li class="slide">
                     <img class="avatar" src="./assets/avatar-3.png" alt="Cliente 3">
-                    <blockquote>We are very pleased with the result. The attention to detail and the quality of the final result make us very happy.</blockquote>
+                    <blockquote>"We are very pleased with the result. The attention to detail and the quality of the final result make us very happy."</blockquote>
                     <h3 class="text-first-color">Tomás Villa</h3>
                     <h6>Futboleterno's CEO</h6>
                   </li>
@@ -453,9 +453,9 @@
                 </ul>
                 <aside class="slides-nav">
                   <label for="slide-1" id="dot-1"></label>
-                  <label for="slide-1" id="dot-2"></label>
-                  <label for="slide-1" id="dot-3"></label>
-                  <label for="slide-1" id="dot-4"></label>
+                  <label for="slide-2" id="dot-2"></label>
+                  <label for="slide-3" id="dot-3"></label>
+                  <label for="slide-4" id="dot-4"></label>
                 </aside>
               </article>
             </div>
