--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
       <div class="container">
         <h2 class="section-title">My work</h2>
         <a href="#trabajo-1" class="portfolio-card">
-          <img src="assets/card-portfolio.jpg" alt="Trabajo 1">
+          <img src="assets/card-portfolio1.png" alt="Trabajo 1">
           <aside class="portfolio-card-info">
             <div>
               <h3>Proyect 1: Angular</h3>
@@ -210,7 +210,7 @@
           </aside>
         </a>
         <a href="#trabajo-2" class="portfolio-card">
-          <img src="assets/card-portfolio-2.jpg" alt="Trabajo 2">
+          <img src="assets/card-portfolio2.png" alt="Trabajo 2">
           <aside class="portfolio-card-info">
             <div>
               <h3>Proyect 2: Figma</h3>
@@ -219,7 +219,7 @@
           </aside>
         </a>
         <a href="#trabajo-3" class="portfolio-card">
-          <img src="assets/card-portfolio-3.jpg" alt="Trabajo 3">
+          <img src="assets/card-portfolio2.png" alt="Trabajo 3">
           <aside class="portfolio-card-info">
             <div>
               <h3>Proyect 3: Figma</h3>
@@ -228,7 +228,7 @@
           </aside>
         </a>
         <a href="#trabajo-4" class="portfolio-card">
-          <img src="assets/card-portfolio-4.jpg" alt="Trabajo 4">
+          <img src="assets/card-portfolio4.png" alt="Trabajo 4">
           <aside class="portfolio-card-info">
             <div>
               <h3>Proyect 4: Blender</h3>
@@ -237,7 +237,7 @@
           </aside>
         </a>
         <a href="#trabajo-5" class="portfolio-card">
-          <img src="assets/card-portfolio-5.jpg" alt="Trabajo 5">
+          <img src="assets/card-portfolio5.png" alt="Trabajo 5">
           <aside class="portfolio-card-info">
             <div>
               <h3>Proyect 5: SolidWorks + Blender</h3>
