--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
       </svg>
       </a>
       <article class="portfolio-modal">
-          <img src="assets/card-portfolio.jpg" alt="Trabajo-1">
+          <img src="assets/card-portfolio1.png" alt="Trabajo-1">
           
           <div class="portfolio-info">
             <h3>Proyect 1</h3>
