--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
           <h1>Luciano Moore</h1>
           <h5>Designer and Web Developer</h5>
           </aside>
-          <p>I was born in Marcos Juarez, Cordoba, in 1995. At the age of 18 I moved to the capital to study Industrial Design at the Faculty of Architecture, Urbanism and Design of the UNC. As I advanced in my career I went deeper and deeper into digital design and the different areas it covers. Currently I am part of the development team of a large Argentine company in the agribusiness sector, where I apply my knowledge of 3D and interface design.</p>
+          <p>I was born in Marcos Juarez, Cordoba, in 1995. At the age of 18 I moved to the capital to study Industrial Design at the Faculty of Architecture, Urbanism and Design at the UNC. As I advanced in my career I went deeper into digital design. During last year I was part of the development team in a large Argentine company in the agribusiness sector, where I apply my knowledge of 3D and interface design.</p>
           <p>
-          Faced with the panorama of great technological    advances and the impact it has on my profession, is that I have been training as a Systems Analyst at the prestigious Faculty of Astronomy, Mathematics and Physics of the UNC. This and a series of programming courses with different languages (JavaScript, Python, Ruby, C) mark another possible path that I am eager to follow.</p>
+          Faced with the panorama of great technological advances and the impact it has on my profession, is that I have been training as a Systems Analyst at the prestigious Faculty of Astronomy, Mathematics and Physics of the UNC. This and a series of programming courses with different languages (JavaScript, Python, Ruby, C) mark another possible path that I am eager to follow.</p>
           <div class="text-center text-lg-right">
             <a class="btn" href="./CV (English).pdf" download>
             DOWNLOAD CV
@@ -92,7 +92,7 @@
           </div>
       </article>
       <article>
-        <img class="gray-scale" src="" alt=""></article>
+        <img class="gray-scale" src="assets/fotoCV.png" alt="Foto CV"></article>
       <article>
         <h2 class="text-center text-lg-left">My Skills</h2>
         <div class="progress">
@@ -106,6 +106,14 @@
         <div class="progress">
           <p>
             <b>Web Design</b>
+            <b>70%</b>
+          </p>
+          <progress value="70" min="0" max="100">
+          </progress>
+        </div>
+        <div class="progress">
+          <p>
+            <b>User Interface</b>
             <b>80%</b>
           </p>
           <progress value="80" min="0" max="100">
@@ -113,27 +121,19 @@
         </div>
         <div class="progress">
           <p>
-            <b>User Interface</b>
-            <b>90%</b>
-          </p>
-          <progress value="90" min="0" max="100">
-          </progress>
-        </div>
-        <div class="progress">
-          <p>
             <b>Backend Web Development</b>
-            <b>60%</b>
+            <b>50%</b>
           </p>
-          <progress value="60" min="0" max="100">
+          <progress value="50" min="0" max="100">
           </progress>
         </div>
          </div>
         <div class="progress">
           <p>
             <b>Visual content and Photography</b>
-            <b>90%</b>
+            <b>80%</b>
           </p>
-          <progress value="90" min="0" max="100">
+          <progress value="80" min="0" max="100">
           </progress>
         </div>
         <div class="progress">
@@ -246,7 +246,7 @@
           </aside>
         </a>
         <a href="#trabajo-6" class="portfolio-card">
-          <img src="assets/card-portfolio-6.jpg" alt="Trabajo-6">
+          <img src="assets/card-portfolio6.png" alt="Trabajo-6">
           <aside class="portfolio-card-info">
             <div>
               <h3>Coming soon</h3>
