--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <section id="inicio" class="home">
       <article class="hero-image" style="--hero-image: url('assets/home-hero-image.png'); --hero-attachment: fixed;">
         <aside class="hero-image-opacity" style="--hero-opacity-color: var(--black-alpha-color);">
-          <div class="hero-image-content">
+          <div class="hero-image-content" style="width: 100%";>
             <h2 class="hero-image-title" style="--hero-text-color: var(--white-color);">
               Welcome <br> to my Website
             
@@ -417,7 +417,7 @@
     <section id="testimonios" class="testimonials">
       <article class="hero-image" style="--hero-image: url(./assets/hero-image-testimonios.png); --hero-attachment: scroll;">
         <aside class="hero-image-opacity" style="--hero-opacity-color: var(--white-alpha-color);">
-          <div class="hero-image-content">
+          <div class="hero-image-content" style="width: 100%;">
             <div class="container">
               <h2 class="section-title">My clients say</h2>
               <article class="carousel" style="--carousel-bg-color:var(--white-alpha-color);">
