--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta name="twitter:card" content="summary">
     <meta property="og:type" content="website">
     <meta property="og:title" name="twitter:title" content="Portafolio CV - luchomoore">
-    <meta property="og:image" name="twitter:image" content="./assets/home-hero-image.jpg">
+    <meta property="og:image" name="twitter:image" content="./assets/fotoCV.png">
     <meta property="og:url" name="twitter:url" content="https:luchom77.github.io/luchom77">
     <meta property="og:description" name="twitter:description" content="Hi! Welcome to my professional portfolio, I'm Lucho Moore, Web Developer">
   </head>
