--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
           </p>
           <progress value="50" min="0" max="100">
           </progress>
-        </div>
+        
          </div>
         <div class="progress">
           <p>
@@ -232,7 +232,7 @@
           <aside class="portfolio-card-info">
             <div>
               <h3>Proyect 4: Blender</h3>
-              <p>In this oppórtunity I made a 3d model in blender of a presentation card. I animated and rendered it as an 8 sec video. It was a one week job.</p>
+              <p>In this opportunity I made a 3d model in blender of a presentation card. I animated and rendered it as an 8 sec video. It was a one week job.</p>
             </div>
           </aside>
         </a>
@@ -249,8 +249,8 @@
           <img src="assets/card-portfolio6.png" alt="Trabajo-6">
           <aside class="portfolio-card-info">
             <div>
-              <h3>Coming soon</h3>
-               <p></p>
+              <h3>Proyect 6: NX Siemmens (Routing-Electrical)</h3>
+               <p>The following is the electrical routing documentation that I have created using NX Siemens, Blender and Figma tools.</p>
             </div>
           </aside>
         </a>
@@ -347,7 +347,7 @@
           <img src="assets/card-portfolio-4.png" alt="Trabajo-4">
           <div class="portfolio-info">
             <h3>Proyect 4</h3>
-            <p>In this oppórtunity I made a 3d model in blender of a presentation card. I animated and rendered it as an 8 sec video. It was a one week job. </p>
+            <p>In this oppórtunity I made a 3d model in blender of a presentation card. I animated and rendered it as an 8 sec video. </p>
             <aside class="portfolio-details">
               <small><b>CLIENT</b></small>
               <small><a href="https://ewol.academy/" target="_blank" rel="noopener">Ewol</a></small>
@@ -373,7 +373,7 @@
           <img src="assets/card-portfolio-5.png" alt="Trabajo-5">
           <div class="portfolio-info">
             <h3>Proyect 5</h3>
-            <p>For this proyect I used SolidWorks for modeling and blender to adjust product's details, create the enviroment, animate and render. Process took 3 weeks. </p>
+            <p>For this proyect I used SolidWorks for modeling, and Blender to adjust product's details, create the enviroment, animate and render.  </p>
             <aside class="portfolio-details">
               <small><b>CLIENT</b></small>
               <small>FAUD's Students</small>
@@ -396,19 +396,19 @@
       </svg>
       </a>
         <article class="portfolio-modal">
-          <img src="assets/card-portfolio-6.jpg" alt="Trabajo-6">
+          <img src="./assets/ruteo-electrico.png" alt="Trabajo-6">
           <div class="portfolio-info">
             <h3>Proyect 6</h3>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sed sapiente, sunt minus ab quo, aliquid sequi aliquam laboriosam tenetur itaque voluptatum mollitia commodi doloribus pariatur nisi voluptates laborum voluptatem nulla!</p>
+            <p>As an industrial designer, working for a large company in the agricultural area, I had the oportunity to learn and develop some skills such as development of the electrical routing in 3d software, and elaboration of electrical drawing documentation, explanatory diagrams for production, and technical manuals.  </p>
             <aside class="portfolio-details">
               <small><b>CLIENT</b></small>
-              <small>Client's name</small>
+              <small>Metalfor SA</small>
               <small><b>DATE</b></small>
-              <small>22/22/2222</small>
+              <small>15/02/2023</small>
               <small><b>CATEGORY</b></small>
-              <small>proyect CATEGORY</small>
+              <small>SPRAYER PROTOTIPE</small>
               <small><b>LINK</b></small>
-              <small><a href="https://luchomoore.com" target="_blank" rel="noopener">https://luchomoore.com</a></small>
+              <small><a href="https://www.behance.net/gallery/161531085/Routing-Electrical" target="_blank" rel="noopener">Routing-Electrical</a></small>
             </aside>
           </div>
         </article>
@@ -503,6 +503,11 @@
               </a>
               <a href="https://www.linkedin.com/in/luciano-moore-1663a9156/" target="_blank" rel="noopener">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M20,3H4C3.447,3,3,3.448,3,4v16c0,0.552,0.447,1,1,1h16c0.553,0,1-0.448,1-1V4C21,3.448,20.553,3,20,3z M8.339,18.337H5.667	v-8.59h2.672V18.337z M7.003,8.574c-0.856,0-1.548-0.694-1.548-1.548s0.691-1.548,1.548-1.548c0.854,0,1.548,0.693,1.548,1.548	S7.857,8.574,7.003,8.574z M18.338,18.337h-2.669V14.16c0-0.996-0.018-2.277-1.388-2.277c-1.39,0-1.601,1.086-1.601,2.207v4.248	h-2.667v-8.59h2.56v1.174h0.037c0.355-0.675,1.227-1.387,2.524-1.387c2.704,0,3.203,1.778,3.203,4.092V18.337z"/></svg>
+              </a>
+              <a href="https://www.behance.net/luchomoore" target="_blank" rel="noopener">
+                <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
+                  <path d="M5.20511 3C5.73288 3 6.21001 3.04389 6.64719 3.14066C7.07819 3.23744 7.4501 3.38711 7.76069 3.5981C8.06846 3.8091 8.30871 4.0848 8.48145 4.43927C8.64855 4.79093 8.73633 5.22755 8.73633 5.73731C8.73633 6.29096 8.60748 6.7574 8.35541 7.13213C8.10053 7.50742 7.72805 7.80619 7.22729 8.04644C7.90698 8.24281 8.41111 8.58547 8.74533 9.07497C9.08236 9.57011 9.24328 10.162 9.24328 10.8451C9.24328 11.4077 9.1465 11.8882 8.93551 12.2928C8.72733 12.7058 8.43418 13.0428 8.06508 13.3067C7.70442 13.5678 7.2768 13.7551 6.81374 13.8812C6.3563 14.0044 5.87298 14.0719 5.38066 14.0719H0V3.00619H5.20455L5.20511 3ZM12.7104 12.1229C13.0384 12.4453 13.5133 12.6062 14.1316 12.6062C14.5739 12.6062 14.9553 12.4948 15.2772 12.2692C15.5968 12.0525 15.7869 11.8117 15.8635 11.5658H17.8035C17.5019 12.524 17.018 13.2155 16.3794 13.6291C15.7408 14.0483 14.9672 14.2503 14.0703 14.2503C13.4401 14.2503 12.8803 14.1535 12.3649 13.9515C11.8607 13.7495 11.4331 13.462 11.0753 13.0957C10.7264 12.7294 10.4569 12.2866 10.2662 11.7684C10.0754 11.2502 9.98486 10.6814 9.98486 10.0658C9.98486 9.46208 10.0873 8.91124 10.2898 8.39248C10.4918 7.86808 10.7703 7.43146 11.1282 7.05055C11.5001 6.66682 11.9254 6.3793 12.4324 6.15368C12.9365 5.92805 13.4818 5.82846 14.0967 5.82846C14.7798 5.82846 15.3655 5.95168 15.8815 6.22119C16.3856 6.47608 16.7986 6.83674 17.1272 7.27054C17.4586 7.70998 17.6898 8.21693 17.8333 8.78858C17.9768 9.35124 18.0207 9.94315 17.9914 10.5733H12.2214C12.2214 11.2035 12.4324 11.7982 12.7548 12.1206L12.6935 12.1443L12.7104 12.1229ZM5.02619 12.1606C5.26363 12.1606 5.49207 12.1369 5.70587 12.0902C5.9225 12.0463 6.11605 11.967 6.27753 11.8646C6.43564 11.765 6.57067 11.6182 6.67026 11.428C6.76704 11.2491 6.81093 11.0004 6.81093 10.7072C6.81093 10.1446 6.64663 9.74003 6.33042 9.49415C6.00802 9.2539 5.58884 9.13349 5.06445 9.13349H2.4301V12.1724H5.02675V12.1488L5.02619 12.1606ZM15.2361 7.92322C14.9694 7.63289 14.53 7.4776 13.9904 7.4776C13.6415 7.4776 13.3518 7.5333 13.1172 7.65652C12.8915 7.76793 12.7042 7.92041 12.5601 8.09877C12.4195 8.27769 12.3227 8.45943 12.267 8.66142C12.2113 8.85779 12.1764 9.03671 12.1674 9.19482H15.7397C15.6868 8.63217 15.4904 8.21918 15.2299 7.92604V7.93504L15.2361 7.92322ZM4.89171 7.46016C5.32271 7.46016 5.67999 7.36057 5.96132 7.15239C6.24265 6.95039 6.37768 6.60999 6.37768 6.14749C6.37768 5.88979 6.32479 5.6788 6.24265 5.5145C6.14306 5.34739 6.01702 5.22136 5.86736 5.13077C5.70925 5.03681 5.52751 4.97266 5.32496 4.93722C5.12296 4.89614 4.90578 4.88151 4.69479 4.88151H2.42391V7.46016H4.89171ZM11.7167 3.74158H16.1943V4.83144H11.7167V3.73258V3.74158Z" fill="black"/>
+                </svg>
               </a>
             </small>
           </aside>
