--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <section id="inicio" class="home">
       <article class="hero-image" style="--hero-image: url('assets/home-hero-image.png'); --hero-attachment: fixed;">
         <aside class="hero-image-opacity" style="--hero-opacity-color: var(--black-alpha-color);">
-          <div class="hero-image-content" style="width: 100%";>
+          <div class="hero-image-content" style="width: 100%">
             <h2 class="hero-image-title" style="--hero-text-color: var(--white-color);">
               Welcome <br> to my Website
             
