--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Portfolio CV - luchomoore</title>
+    <title>LM</title>
     <link rel="stylesheet" href="styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -24,6 +24,7 @@
     <meta property="og:image" name="twitter:image" content="./assets/fotoCV.png">
     <meta property="og:url" name="twitter:url" content="https:luchom77.github.io/luchom77">
     <meta property="og:description" name="twitter:description" content="Hi! Welcome to my professional portfolio, I'm Lucho Moore, Web Developer">
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
 
   <body>
